# lc3-vm

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json
src/: lib.rs  main.rs
src/instruction/: instr.rs  mod.rs  trap.rs
src/memory/: mod.rs
src/register/: mod.rs
static/: index.html  index.js  package-lock.json
trace/: readme  simple.asm
visualizer/: Cargo.toml  LICENSE_MIT
visualizer/src/: lib.rs
