[package]
name = "my_vm"
version = "0.1.0"
authors = ["Oscar Zhang <oscar.zth1999@gmail.com>"]
description = "LC-3 Virtual Machine with WASM debugger in Rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/OscarTHZhang/lc3-vm"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"